--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 
     <!-- SDK and Application Code -->
-    <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script>
-    <script type="text/javascript" src="scripts/ui.js"></script>
+    <!-- <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script> -->
+
+    <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
+
+    <!-- <script type="text/javascript" src="scripts/ui.js"></script> -->
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -34,6 +37,8 @@
         <section class="video-block">
             <div class="container">
                 <div id="app">
+
+                    <div class="dolbyio-widget"></div>
                     <h1 id="name-message">Logging in...</h1>
 
                     <!-- Join or Leave a Conference -->
@@ -119,7 +124,10 @@
     </footer>
     <!-- end -->
     <!-- Application Code -->
-    <script type="text/javascript" src="scripts/client.js"></script>
+    <!-- <script id="widget" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script> -->
+<!-- 
+    <script type="text/javascript" src="scripts/ui.js"></script>
+    <script type="text/javascript" src="scripts/client.js"></script> -->
 
     <!-- Bootstrap Theme -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
