--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <!-- SDK and Application Code -->
     <!-- <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script> -->
 
-    <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
+    <!-- <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script> -->
 
     <!-- <script type="text/javascript" src="scripts/ui.js"></script> -->
     <link rel="stylesheet" href="./style.css">
@@ -37,10 +37,10 @@
         <section class="video-block">
             <div class="container">
                 <div id="app">
-
-                    <div class="dolbyio-widget"></div>
+                
                     <h1 id="name-message">Logging in...</h1>
-
+                    <script id="widget" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
+                    <div class="dolbyio-widget"></div>
                     <!-- Join or Leave a Conference -->
                     <div id="form">
                         <label>Conference alias :</label>
@@ -124,7 +124,7 @@
     </footer>
     <!-- end -->
     <!-- Application Code -->
-    <!-- <script id="widget" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script> -->
+   
 <!-- 
     <script type="text/javascript" src="scripts/ui.js"></script>
     <script type="text/javascript" src="scripts/client.js"></script> -->
