updated widget ui

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 
     <!-- SDK and Application Code -->
-    <script id="widget" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
+    <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
     <!-- <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script> -->
 
     <!-- <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script> -->
