--- a/www/index.html
+++ b/www/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 
     <!-- SDK and Application Code -->
-    <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
+ 
     <!-- <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script> -->
 
-    <!-- <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script> -->
+    <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
 
     <!-- <script type="text/javascript" src="scripts/ui.js"></script> -->
     <link rel="stylesheet" href="./style.css">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </nav>
-    <main class="page lanidng-page">
+    <main class="page landing-page">
         <section class="video-block">
             <div class="container">
                 <div id="app">
