--- a/www/index.html
+++ b/www/index.html
@@ -12,11 +12,8 @@
 
     <!-- SDK and Application Code -->
  
-    <!-- <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script> -->
-
-    <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
-
-    <!-- <script type="text/javascript" src="scripts/ui.js"></script> -->
+    <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script>
+    <script type="text/javascript" src="scripts/ui.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -37,9 +34,7 @@
     <main class="page landing-page">
         <section class="video-block">
             <div class="container">
-                <div id="app">
-                
-                    <div class="dolbyio-widget"></div>
+                <div id="app"> 
 
                     <h1 id="name-message">Logging in...</h1>
                 
@@ -127,9 +122,9 @@
     </footer>
     <!-- end -->
     <!-- Application Code -->
-<!-- 
-    <script type="text/javascript" src="scripts/ui.js"></script>
-    <script type="text/javascript" src="scripts/client.js"></script> -->
+
+
+    <script type="text/javascript" src="scripts/client.js"></script>
 
     <!-- Bootstrap Theme -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
