updated widget css

--- a/www/home.html
+++ b/www/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <script id="dolbyio-widget-script" src="./scripts/widget.js" data-config="./scripts/widget-config.json"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
